FormFieldTile: fix style
The border radius of the .field was set to inherit to ensure it never
overflows its parent, the .form-field. As the .field has a padding this
was not really necessary and led to content being cut of. Therefore, do
not inherit border radius to the .field on a FormFieldTile but set the
overflow of .form-field to hidden.

390226

--- a/eclipse-scout-core/src/tile/fields/FormFieldTile.less
+++ b/eclipse-scout-core/src/tile/fields/FormFieldTile.less
@@ -46,10 +46,7 @@
   & > .form-field {
     padding: 16px @tile-field-padding @tile-field-padding;
     border-radius: inherit;
-
-    & > .field {
-      border-radius: inherit;
-    }
+    overflow: hidden;
 
     &.label-hidden {
       padding-top: @tile-field-padding;
